--- a/.classpath
+++ b/.classpath
@@ -2,5 +2,12 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="lib" path="C:/Users/verop/Desktop/zookeeper-3.4.13.tar-1/zookeeper-3.4.13/zookeeper-3.4.13.jar"/>
+	<classpathentry kind="lib" path="C:/Users/verop/Desktop/zookeeper-3.4.13.tar-1/zookeeper-3.4.13/lib/slf4j-api-1.7.25.jar"/>
+	<classpathentry kind="lib" path="C:/Users/verop/Desktop/zookeeper-3.4.13.tar-1/zookeeper-3.4.13/lib/slf4j-log4j12-1.7.25.jar"/>
+	<classpathentry kind="lib" path="C:/Users/verop/Desktop/zookeeper-3.4.13.tar-1/zookeeper-3.4.13/lib/audience-annotations-0.5.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/verop/Desktop/zookeeper-3.4.13.tar-1/zookeeper-3.4.13/lib/jline-0.9.94.jar"/>
+	<classpathentry kind="lib" path="C:/Users/verop/Desktop/zookeeper-3.4.13.tar-1/zookeeper-3.4.13/lib/log4j-1.2.17.jar"/>
+	<classpathentry kind="lib" path="C:/Users/verop/Desktop/zookeeper-3.4.13.tar-1/zookeeper-3.4.13/lib/netty-3.10.6.Final.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
